<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lingling Calculator</string>
    <string name="hello_world">Hello, Material You!</string>
    <string name="fab_description">Add</string>
    <string name="fab_clicked">FAB clicked</string>
    <string name="ac">AC</string>
    <string name="delete">⌫</string>
    <string name="div">/</string>
    <string name="mul">×</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="abc1">检查更新</string>
    <string name="abc2">取消</string>
    <string name="abc3">确定</string>
    <string name="cnm1">GitHub头像</string>
    <string name="cnm2">Lingling Calculator</string>
    <string name="cnm3">by Sunglasses-MaxBin</string>
    <string name="cnm4">GitHub仓库</string>
    <string name="cnm5">关闭</string>
    <string name="qwe1">(</string>
    <string name="qwe2">)</string>
    <string name="qwe3">%</string>
    <string name="qwe4">^</string>
    <string name="ver">1.7.0</string>
    <string name="interface_settings">界面设置</string>
    <string name="save_and_restart">保存并重启软件</string>
    <string name="reset_default">恢复默认</string>
    <string name="view_preview">查看预览</string>
    <string name="scale_label">界面大小（倍数）</string>
    <string name="density_label">设置Density (默认 160)</string>
    <string name="settings">设置</string>
    <string name="back">返回</string>
    <string name="Appearance_settings">外观设置</string>
    <string name="About">关于本应用</string>      
    <string name="asd1">调整深色/浅色主题</string> 
    <string name="asd2">调整界面大小和显示密度</string>
    <string name="asd3">开发者信息和GitHub链接</string>
    <string name="asd4">160</string>
    <string name="asd5">修改后需重启应用才能生效</string>
    <string name="asd6">例如 1.8</string>
    <string name="asd7">1.0</string>
</resources>

</LinearLayout>