<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num0"
        android:textSize="48sp"
        android:textAlignment="textEnd"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 第一行 AC Delete / + -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ac"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/ac"
        app:layout_constraintTop_toBottomOf="@id/tv_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_del"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_del"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@id/tv_display"
        app:layout_constraintStart_toEndOf="@id/btn_ac"
        app:layout_constraintEnd_toStartOf="@id/btn_div"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/div"
        app:layout_constraintTop_toBottomOf="@id/tv_display"
        app:layout_constraintStart_toEndOf="@id/btn_del"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/tv_display"
        app:layout_constraintStart_toEndOf="@id/btn_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="24dp"/>

    <!-- 第二行 7 8 9 - -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num7"
        app:layout_constraintTop_toBottomOf="@id/btn_ac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num8"
        app:layout_constraintTop_toBottomOf="@id/btn_ac"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num9"
        app:layout_constraintTop_toBottomOf="@id/btn_ac"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintEnd_toStartOf="@id/btn_sub"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sub"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/sub"
        app:layout_constraintTop_toBottomOf="@id/btn_ac"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="24dp"/>

    <!-- 第三行 4 5 6 × -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num4"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num5"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num6"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintEnd_toStartOf="@id/btn_mul"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mul"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/mul"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="24dp"/>

    <!--第四行 1 2 3 = -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num1"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num2"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num3"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintEnd_toStartOf="@id/btn_eq"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_eq"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/equal"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="24dp"/>

    <!--第五行 0 点 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/num0"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dot"
        app:cornerRadius="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/dot"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
